# CompressaoHuffman

./: ArqTeste.txt  ArqTeste2.txt  ArqTeste3.txt  CMakeLists.txt  README.md
include/: HuffmanCoding.h  NodeQueue.h  NodeTree.h  PriorityQueue.h
src/: HuffmanCoding.cpp  NodeQueue.cpp  NodeTree.cpp  PriorityQueue.cpp  main.cpp
tests/: huffman_test.cpp
